k8s/app/docs-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: chetan1111/any1
---
apiVersion: v1
kind: Service
metadata:
  name: docs-srv
spec:
  selector:
    app: docs
  ports:
    - name: docs
      protocol: TCP
      port: 5000
      targetPort: 5000
