k8s/app/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "docs.vareniyam.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docs-srv
                port:
                  number: 5000

    - host: "vareniyam.dev"
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-srv
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-srv
                port:
                  number: 3000
